# VibeUE

./: .gitignore  .mcp.json  ASSET_SERVICE_UPDATE.md  BuildAndLaunchGame.ps1  BuildAndLaunchGame.sh  BuildPlugin.bat  CLAUDE.md  DEAD_HANDLERS_DELETED.md  FAB-Checklist.md  FAB-DESCRIPTION.md  FAB_Tech_Details.md  FilterPlugin.ini  HANDLER_AUDIT.md  HANDLER_AUDIT_COMPLETE.md  HANDLE_MANAGE_BLUEPRINT_NODE_REFACTORING.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  ISSUE_SUMMARY.md  LICENSE  MCP-Inspector.bat  MakePlugin-README.md  MakePlugin.ps1  PHASE4_TASK17_STATUS.md  PHASE4_TASK18_STATUS.md  QA-Status.md  QUICKSTART.md  README.md  SEARCH_AND_READ_TOOLS_ANALYSIS.md  TASK19_COMPLETION_REPORT.md  TASK20_COMPLETION_REPORT.md  VIBEUE_MCP_SETUP.md  VibeComparison.md  VibeUE.uplugin  start-vibeue-proxy.bat  vibeue-proxy.json  vibeue-proxy.py
Python/vibe-ue-main/Python/: PUBLISHING.md  README.md  ai_guidance.py  mcp_client_guide.py  pyproject.toml  requirements.txt  server.json  test_manage_blueprint_node_payload.py  test_mcp_tools.py  test_parameter_fix.py  test_workflow.py  validate_server.py  vibe_ue_server.py
Python/vibe-ue-main/Python/docs/: README.md  component_tools_migration.md  function-call-node-blocker.md  manage_blueprint_components_design.md  node-creation-patterns.md  node-discovery-gap-analysis.md  node-tools-improvements.md  phase1-implementation-summary.md  tool_verification_report.md
Python/vibe-ue-main/Python/resources/: UMG-Guide.md  help.md  manage_blueprint_components_guide.md  manage_blueprint_node_test_prompts.md  node-connection-guide.md  node-positioning-topic-complete.md  node-tools-testing-report.md
Python/vibe-ue-main/Python/scripts/: complete_phase3_functions.py  complete_phase4_functions.py  test_blueprint_component_service.py  test_blueprint_reflection_service.py  test_descriptor_system.py  test_enhanced_discovery.py  test_function_call_fix.py  (+2 more)
(+1109 files in other folders)
