[project]
name = "vibeue"
version = "0.1.0"
description = "VibeUE MCP Server: Control Unreal Engine 5.6+ through AI assistants using the Model Context Protocol. Features 60+ tools for Blueprint and UMG manipulation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Kevin Buckley", email = "kevin@vibeue.dev"}
]
keywords = ["unreal-engine", "mcp", "model-context-protocol", "ai-assistant", "blueprint", "umg", "gamedev"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Games/Entertainment"
]
dependencies = [
  "mcp[cli]>=1.4.1",
  "fastmcp>=0.2.0",
  "uvicorn",
  "fastapi",
  "pydantic>=2.6.1",
  "requests"
]

[project.urls]
Homepage = "https://github.com/kevinpbuckley/VibeUE"
Documentation = "https://github.com/kevinpbuckley/VibeUE/blob/master/README.md"
Repository = "https://github.com/kevinpbuckley/VibeUE"
Issues = "https://github.com/kevinpbuckley/VibeUE/issues"

[project.optional-dependencies]
# SVG to PNG conversion support for manage_asset svg_to_png action
svg = [
  "cairosvg>=2.8.0",
  "pillow>=11.0.0",
  "numpy>=1.26.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Package the entire directory structure
packages = ["tools", "scripts", "docs"]
py-modules = ["vibe_ue_server"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.txt"]

[project.scripts]
vibeue = "vibe_ue_server:main"
 
